--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
 
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 }
