--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
